Squash merge fix-onscreen-keyboard into main

--- a/src/index.css
+++ b/src/index.css
@@ -182,7 +182,7 @@ code {
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
+  position: absolute; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
@@ -190,6 +190,7 @@ code {
   height: 100%; /* Full height */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  overflow: none;
 }
 
 /* Modal Content/Box */
@@ -199,6 +200,7 @@ code {
   padding: 20px;
   border: 1px solid #888;
   width: 50%; /* Could be more or less, depending on screen size */
+  overflow: none;
 }
 
 /* The Close Button */
